ghc/tests/typecheck/should_fail/tcfail028.hs
--!!! tests for ArityErr

data A a b = B (A a)
